--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="sitenav justify-content-between align-items-center">
                 <div class="sitenav__cites">
                     <a class="header__cites-logo" href="#">
-                        <img src="./images/facebook.png" alt="facebook" width="45" height="45">
+                        <img src="./images/facebookk.png" alt="facebook" width="45" height="45">
                     </a>
                     <a class="header__cites-logo" href="#">
                         <img src="./images/twitter.png" alt="facebook" width="45" height="45">
@@ -764,7 +764,154 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
+        <div class="container footer__container">
+            <div class="footer__top">
+                <a class="footer__link" href="#">
+                    <img src="./images/logo.svg" alt="">
+                </a>
 
+                <div class="footer__cites-link">
+                    <a class="footer__cites-link text-decoration-none" href="#">
+                        <img src="./images/facebook.png" alt="facebook" width="55" height="55">
+                    </a>
+
+                    <a class="footer__cites-link text-decoration-none" href="#">
+                        <img src="./images/browser.png" alt="facebook" width="55" height="55">
+                    </a>
+
+                    <a class="footer__cites-link text-decoration-none" href="#">
+                        <img src="./images/linkedln.png" alt="facebook" width="55" height="55">
+                    </a>
+
+                    <a class="footer__cites-link text-decoration-none" href="#">
+                        <img src="./images/instagram.png" alt="facebook" width="55" height="55">
+                    </a>
+                </div>
+            </div>
+
+            <ul class="footer__list list-unstyled">
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-active text-decoration-none" href="#">
+                        Explore
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Home
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        About
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Articles
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Our Store
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Contact Us
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="footer__list list-unstyled">
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-active text-decoration-none" href="#">
+                        Utility Pages
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Style Guide
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        404 Not Found
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Password Protected
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Licenses
+                    </a>
+                </li>
+
+                <li class="footer__item">
+                    <a class="footer__list-link footer__list-link-small text-decoration-none" href="#">
+                        Changelog
+                    </a>
+                </li>
+            </ul>
+
+            <ul class="footer__list list-unstyled">
+                <li class="footer__item footer__item-last">
+                    <a class="footer__list-link footer__list-link-active text-decoration-none" href="#">
+                        Keep in Touch
+                    </a>
+                </li>
+
+                <li class="footer__item footer__item-last m-0">
+                    <a class="footer__list-link footer__list-link-last text-decoration-none" href="#">
+                        Address :
+                    </a>
+
+                    <p class="footer__list-desc">
+                        24A Kingston St, Los Vegas
+                        NC 28202, USA.
+                    </p>
+                </li>
+
+                <li class="footer__item footer__item-last">
+                    <a class="footer__list-link footer__list-link-last text-decoration-none" href="#">
+                        Mail :
+                    </a>
+
+                    <p class="footer__list-desc">
+                        support@pages.com
+                    </p>
+                </li>
+
+                <li class="footer__item footer__item-last">
+                    <a class="footer__list-link footer__list-link-last text-decoration-none" href="#">
+                        Phone :
+                    </a>
+
+                    <p class="footer__list-desc">
+                        (+22) 123 - 4567 - 900
+                    </p>
+                </li>
+            </ul>
+
+        </div>
+
+        <p class="footer__last-desc">
+            © Drafted by
+            <span class="footer__last-desc-active">VictorFlow</span>
+            - Powered by
+            <span class="footer__last-desc-active">Webflow</span>
+        </p>
     </footer>
 
     <script src="./js/apps.js"></script>
